--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -65,10 +65,11 @@
         android:layout_height="wrap_content"
         android:text="0:00"
         android:id="@+id/mainTimerTextView"
-        android:textSize="25sp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="43dp" />
+        android:textSize="45sp"
+        android:layout_alignTop="@+id/mainResetButton"
+        android:layout_toRightOf="@+id/mainResetButton"
+        android:layout_toEndOf="@+id/mainResetButton"
+        android:layout_marginLeft="5sp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -79,8 +80,9 @@
         android:paddingLeft="0dp"
         android:textColor="#ffffff"
         android:layout_alignTop="@+id/mainStopStartButton"
-        android:layout_toRightOf="@+id/mainTimerTextView"
-        android:layout_toEndOf="@+id/mainTimerTextView" />
+        android:layout_toRightOf="@+id/mainStopStartButton"
+        android:layout_toEndOf="@+id/mainStopStartButton"
+        android:layout_marginLeft="5sp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -89,10 +91,10 @@
         android:id="@+id/mainStopStartButton"
         android:background="#3399ff"
         android:textColor="#ffffff"
-        android:layout_above="@+id/mainTimerTextView"
-        android:layout_toLeftOf="@+id/mainTimerTextView"
-        android:layout_toStartOf="@+id/mainTimerTextView"
-        android:layout_marginBottom="10sp" />
+        android:layout_below="@+id/warmup3TextView"
+        android:layout_alignLeft="@+id/warmup3TextView"
+        android:layout_alignStart="@+id/warmup3TextView"
+        android:layout_marginTop="10sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -160,8 +162,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="40sp"
-        android:textAlignment="textStart"
-        android:singleLine="false" />
+        android:textAlignment="center"
+        android:singleLine="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -176,8 +178,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="40sp"
-        android:textAlignment="textStart"
-        android:singleLine="false" />
+        android:textAlignment="center"
+        android:singleLine="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -191,8 +193,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="40sp"
-        android:textAlignment="textStart"
-        android:singleLine="false" />
+        android:textAlignment="center"
+        android:singleLine="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -207,7 +209,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="40sp"
-        android:textAlignment="textStart"
-        android:singleLine="false" />
+        android:textAlignment="center"
+        android:singleLine="true" />
 
 </RelativeLayout>
